--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,10 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+p{
+    margin-bottom: 0;
+}
+span{
+    color: red;
+    display: none;
+}
+li:hover span{
+    display: block;
+}
