--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,18 @@
+*{
+    font-family: 'Edu VIC WA NT Beginner', cursive;
+}
+
+body{
+    background-image: url(https://images.unsplash.com/photo-1497032628192-86f99bcd76bc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
+}
+
 p{
     margin-bottom: 0;
 }
 span{
     color: red;
-    display: none;
+    display: none !important;
 }
 li:hover span{
-    display: block;
+    display: block !important;
 }
